tests/Rules/Structure/Fixtures/valid/with_title.html.twig
<html>
  <head>
    <title>My page</title>
  </head>
  <body>
    <h1>Page</h1>
  </body>
</html>
