tests/Rules/Structure/Fixtures/invalid/html_no_lang.html.twig
{# 1 errors #}
<!doctype html>
<html>
<head></head>
<body></body>
</html>
